<resources>
    <string name="confirm">OK</string>
    <string name="init_page_login">RC User Login</string>
    <string name="init_page_signup">New RC User</string>
    <string name="init_message_title_one">Share the moment</string>
    <string name="init_message_text_one">Share every special moment in your life</string>
    <string name="init_message_title_two">Photo editing</string>
    <string name="init_message_text_two">Make photos more interesting with audio and graffiti</string>
    <string name="init_message_title_three">Timed deletion</string>
    <string name="init_message_text_three">Photos will be automatically deleted after viewed, no privacy concerns</string>
    <string name="reg_bubble_desc_text">After signing up, you can use it to log in to any RC app.</string>
    <string name="registe_email_hint">E-mail</string>
    <string name="login_password_hint">Password (6-20 characters)</string>
    <string name="init_regist_agreement">Signing up implies acceptance of our terms of service and privacy policies.</string>
    <string name="landing_page_signup">Sign up</string>
    <string name="login_title_bubble_text">New RC User</string>
    <string name="login_nick_hint">Nickname (less than 20 characters)</string>
    <string name="register_confirm_email_address">Your Email Address is:</string>
    <string name="modify">Edit</string>
    <string name="ok">OK</string>
    <string name="registe_email_error">Email format error</string>
    <string name="register_password_error">Please enter a password containing 6-20 characters</string>
    <string name="login_title_login_bubble_text">RC User Login</string>
    <string name="login_username_hint">E-mail,RCID</string>
    <string name="login_forget_psw_hint">Forgot password</string>
    <string name="landing_page_login">Login</string>
    <string name="login_use_account_below">Choose RC Accounts Below</string>
    <string name="user_other_account">Use another RC account to log in</string>
    <string name="forget_password_text_hint">Please Enter Your E-mail Address</string>
    <string name="forget_password_reset_text">Password reset e-mail has been sent to %s</string>
    <string name="find_friend_title">Search friends</string>
    <string name="firend_list_invite_friend_title">Invite friends</string>
    <string name="firend_list_used_photochat_friend_title">Friends in FriendMe</string>
    <string name="search_hint">No results for this search</string>
    <string name="minute">%1$dm ago</string>
    <string name="second">%1$ds ago</string>
    <string name="hour">%1$dh ago</string>
    <string name="day">%1$dd ago</string>
    <string name="ago">%1$s</string>
    <string name="send_sending">Sending</string>
    <string name="send_sended">%1$s-Sent</string>
    <string name="send_received">%1$s-Delivered</string>
    <string name="send_looked">%1$s-Viewed</string>
    <string name="send_fail">Failed to send, tap to try again</string>
    <string name="receive_downloading">Loading</string>
    <string name="receive_loaded">%1$s-Hold to view</string>
    <string name="receive_looked">%1$s-Viewed</string>
    <string name="receive_fail">Failed to load, tap to try again</string>
    <string name="added_by_friend">%1$s added me as a friend</string>
    <string name="added_friend_back">I add %1$s as a friend</string>
    <string name="added_friend">I add %1$s as a friend</string>
    <string name="added_friend_confirm">%1$s added me as a friend</string>
    <string name="operation">Operation</string>
    <string name="resend">Resend</string>
    <string name="delete">Delete</string>
    <string name="reload">Reload</string>
    <string name="will_quit">Click \"Back\" again to exit app</string>
    <string name="take_score">Rate Us</string>
    <string name="me">me</string>
    <string name="attention_later">Maybe Later</string>
    <string name="update_now">Update now</string>
    <string name="update_dialog_title">Updates available!</string>
    <string name="bind_phone_attention">Register your phone number to let your friends find you more easily</string>
    <string name="bind_now">Register now</string>
    <string name="share_complete">SUCCESS！</string>
    <string name="save_success">Saved to Album！</string>
    <string name="voice_too_short">Recording is too short</string>
    <string name="voice_record">Hold to record</string>
    <string name="select_friend_title">Send to:</string>
    <string name="my_firend_title">Friends</string>
    <string name="my_friends_added">My friends</string>
    <string name="my_firend_suggested_title">Friend recommendations</string>
    <string name="add_friend_title">Add friends</string>
    <string name="add_to_friend">Add as a friend</string>
    <string name="my_firend_setting_more_title">More</string>
    <string name="friend_dynamic">Friend Updates</string>
    <string name="my_account">My RC Account</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="setting_page_clean_history">Clear History</string>
    <string name="clear_infos_message">Are you sure you want to clear all the history?</string>
    <string name="add_friend">added %1$s as friends</string>
    <string name="add_app">joined %1$s</string>
    <string name="setting_update_facebook_unbind"></string>
    <string name="unauthorized">Not connected</string>
    <string name="phone_unbind">Not registered</string>
    <string name="setting_update_login_password">Change Login Password</string>
    <string name="login_out_account">Log out</string>
    <string name="dialog_confirm_deauth">Are you sure to disconnect?</string>
    <string name="change_password">Change Login Password</string>
    <string name="input_current_password">Please enter your current password</string>
    <string name="forget_password_title">Forgot Password</string>
    <string name="change_password_edit_title">Set New Password</string>
    <string name="change_password_new_password_hint">New Password</string>
    <string name="change_password_confirm_password_hint">Please Enter Again</string>
    <string name="two_password_not_same">The passwords entered are different</string>
    <string name="password_change_complete">Password Changed</string>
    <string name="bind_phone">Phone Number Register</string>
    <string name="bind_phone_input_phone_hint">Enter your phone number</string>
    <string name="next_number">Get Verification Code(%1$d)</string>
    <string name="sms_reciver_info">You will receive a SMS including verification code</string>
    <string name="input_validate">Please enter the verification code</string>
    <string name="commit">Submit</string>
    <string name="resend_sms_number">Get verification code again(%1$d)</string>
    <string name="resend_sms_second">Get verification code again(%1$d)</string>
    <string name="phone_number_validate">Phone Number Verification</string>
    <string name="country_code">(+%1$s)%2$s</string>
    <string name="settings_update_person_info_title">Profile</string>
    <string name="nick">Nickname</string>
    <string name="sex">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="settings_update_name_title">Nickname</string>
    <string name="settings_select_sex">Gender</string>
    <string name="male">Male</string>
    <string name="famale">Female</string>
    <string name="select_birthday">Birthday</string>
    <string name="sex_secret"></string>
    <string name="receive_setting">Who can send me photos</string>
    <string name="receive_all">Anyone</string>
    <string name="receive_friend">My friends</string>
    <string name="dynamic_setting">Share my updates with friends</string>
    <string name="trends_share">Share</string>
    <string name="trends_hide">Do Not Share</string>
    <string name="check_update">Check for updates</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_service">Terms of Service</string>
    <string name="compact">Privacy Policy</string>
    <string name="no_new_version">FriendMe is the latest version</string>
    <string name="use_info_below">Choose Profile</string>
    <string name="or">or</string>
    <string name="use_new_info">Use a new profile</string>
    <string name="other_device_login">Your account is already being used on another device.</string>
    <string name="relogin">OK</string>
    <string name="contact_friend">Contacts:</string>
    <string name="facebook_friend">Facebook:</string>
    <string name="vk_friend">VKontakte:</string>
    <string name="gcm_message">You have %1$d new message(s)</string>
    <string name="gcm_friend">Someone added you as a friend</string>
    <string name="friend_detail_send_photo_hint_text">Send Photo</string>
    <string name="cancel">cancel</string>
    <string name="login_account_error">Invalid account or password</string>
    <string name="long_long_ago">Long ago</string>
    <string name="list_me">%1$s(me)</string>
    <string name="no_net">No network connection</string>
    <string name="net_error">Failed, please try again later</string>
    <string name="null_str"></string>
    <string name="app_name">FriendMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">v2.2</string>
    <string name="my_friends_new">新的好友</string>
    <string name="user_message">RC帐号信息</string>
    <string name="my_firend_invite_send_short_msg"> 邀请你加入，和好友分享私密有趣图片，绝对安全！</string>
    <string name="my_firend_no_friend_hint">\t\t  No friends here!\nFind some friends now.</string>
    <string name="add_friend_search_key_hint_text">"Email/RCID"</string>
    <string name="add_friend_from_phonebook_hint_text">从手机通讯录查找</string>
    <string name="friends_already_use_app">使用FriendMe的好友</string>
    <string name="add_friend_from_facebook_hint_text">从Facebook好友查找</string>
    <string name="settings_select_sex_private">保密</string>
    <string name="settings_update_name_limited_hint">1-20个字符</string>
    <string name="settings_update_signature_title">编辑个性签名</string>
    <string name="settings_update_signature_limited_hint">1-60个字符</string>
    <string name="settings_update_editor_hint">enter text...</string>
    <string name="settings_tacoty_account_info_title">RC账号信息</string>
    <string name="login_out">注销</string>
    <string name="deauthorize_complete">解除绑定成功</string>
    <string name="deauthorize_fail">解除绑定失败</string>
    <string name="setting_update_set_rcid_title">设置ID</string>
    <string name="setting_update_facebook_unbind_title">Facebook账号</string>
    <string name="setting_update_facebook_unbind_btn">解除绑定</string>
    <string name="setting_update_name_invalid">请输入1-20字符</string>
    <string name="take">将</string>
    <string name="camera">相机</string>
    <string name="photo">相册</string>
    <string name="no_sdc">失败，请重试!</string>
    <string name="saving">正在保存...</string>
    <string name="save_fail">保存失败</string>
    <string name="please_select_contact">请选择联系人</string>
    <string name="receive_data_error">返回数据异常</string>
    <string name="pull_to_refresh_footer_release_label">let it go to load</string>
    <string name="pull_to_refresh_footer_pull_label">pull up to load more</string>
    <string name="pull_to_refresh_footer_refreshing_label">loading\u2026</string>
    <string name="facebook">Facebook</string>
    <string name="vkontakte">VKontakte</string>
    <string name="next">下一步</string>
    <string name="change_phone_number">修改手机号</string>
    <string name="resend_sms">重新发送短信</string>
    <string name="register_nick_hint">昵称（20个字符以内）</string>
    <string name="forget_password_email_address_text">输入注册的邮箱地址</string>
    <string name="account_name">账号名称</string>
    <string name="contact">Contacts</string>
    <string name="show_all_drift">All</string>
    <string name="show_send_drift">Uploaded</string>
    <string name="show_receive_drift">Received</string>
</resources>