<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_show_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_send_drift" />

    <Button
        android:id="@+id/btn_show_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_receive_drift" />

    <Button
        android:id="@+id/btn_show_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_drift" />

</LinearLayout>