<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/base_top_navigate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            style="@style/text_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_validate" />

        <EditText
            android:id="@+id/et_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:maxLength="6" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/commit" />

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/resend_sms" />

        <Button
            android:id="@+id/btn_change_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/change_phone_number" />
    </LinearLayout>

</LinearLayout>