<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <include layout="@layout/base_top_navigate" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:paddingLeft="@dimen/default_gap_2x"
        android:paddingRight="@dimen/default_gap_2x" >

        <ImageView
            android:id="@+id/iv_registe_head"
            android:layout_width="@dimen/registe_image_width"
            android:layout_height="@dimen/registe_image_width"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/login_fields"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/linear_platform_accounts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/text_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_use_account_below" />

            <ListView
                android:id="@+id/lv_apps_account"
                style="@style/listview_base"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@id/reg_bubble_desc_text"
            android:layout_width="wrap_content"
            android:layout_below="@+id/linear_platform_accounts"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/reg_bubble_desc_text" />

        <LinearLayout
            android:id="@id/login_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_bubble_desc_text"
            android:layout_toLeftOf="@+id/iv_registe_head"
            android:background="@drawable/edit_fields_background"
            android:orientation="vertical" >

            <EditText
                android:id="@id/login_id"
                style="@style/login_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ui_element_unit"
                android:hint="@string/login_username_hint"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@id/login_nick"
                style="@style/login_edittext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ui_element_unit"
                android:hint="@string/login_nick_hint"
                android:inputType="textEmailAddress"
                android:maxLength="20" />

            <View
                android:id="@id/login_field_line2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@id/login_password"
                    style="@style/login_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/ui_element_unit"
                    android:hint="@string/login_password_hint"
                    android:maxLength="20" />

                <Button
                    android:id="@id/login_page_forget_password_button"
                    style="@style/LandingPageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:layout_marginRight="@dimen/default_gap"
                    android:background="@android:color/transparent"
                    android:text="@string/login_forget_psw_hint"
                    android:textColor="@color/blue"
                    android:textSize="19sp" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@id/login_page_signup_button"
            style="@style/LandingPageButton"
            android:layout_below="@id/login_fields"
            android:layout_marginLeft="@dimen/default_gap_2x"
            android:layout_marginRight="@dimen/default_gap_2x"
            android:layout_marginTop="@dimen/default_gap_2x"
            android:background="@drawable/button_selector_yellow"
            android:text="@string/landing_page_signup"
            android:textColor="@android:color/white" />

        <Button
            android:id="@id/login_page_login_button"
            style="@style/LandingPageButton"
            android:layout_below="@id/login_page_signup_button"
            android:layout_marginLeft="@dimen/default_gap_2x"
            android:layout_marginRight="@dimen/default_gap_2x"
            android:layout_marginTop="@dimen/default_gap_2x"
            android:background="@drawable/button_selector_yellow"
            android:text="@string/landing_page_login"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>