<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/base_top_navigate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/about_icon_width"
                android:layout_height="@dimen/about_icon_width"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    style="@style/text_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    style="@style/text_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/version_str" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/init_page_login_button_selector"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/check_update" />

        <TextView
            android:id="@+id/tv_compact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/init_page_login_button_selector"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/compact" />
    </LinearLayout>

</LinearLayout>