<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/app_backgroud">  
  <include layout="@layout/base_top_navigate"/>  
  <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/title"> 
    <ImageView android:id="@+id/login_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignRight="@id/login_fields" android:layout_marginTop="@dimen/login_margin_top" android:src="@drawable/login_top" android:visibility="gone"/>  
    <LinearLayout android:id="@+id/check_psw_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_marginTop="@dimen/login_margin_top" android:gravity="center" android:orientation="vertical"> 
      <RelativeLayout android:id="@+id/add_friend_from_phonebook_layout" android:layout_width="match_parent" android:layout_height="39dp" android:layout_marginLeft="@dimen/default_gap_2x" android:layout_marginRight="@dimen/default_gap_2x" android:layout_marginTop="@dimen/default_gap_2x" android:background="@drawable/init_page_login_button_selector"> 
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginLeft="6dp" android:gravity="center_vertical" android:text="@string/setting_update_facebook_unbind_title"></TextView>  
        <TextView android:id="@+id/settings_facebook_account_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_marginRight="@dimen/default_gap" android:gravity="center_vertical" android:text="@string/account_name"/> 
      </RelativeLayout> 
    </LinearLayout>  
    <Button android:id="@id/settings_update_confirm_button" style="@style/LandingPageButton" android:layout_below="@id/check_psw_layout" android:layout_marginLeft="@dimen/default_gap_2x" android:layout_marginRight="@dimen/default_gap_2x" android:layout_marginTop="@dimen/default_gap_2x" android:background="@drawable/button_selector_yellow" android:text="@string/setting_update_facebook_unbind_btn" android:textColor="@android:color/white"/>  
    <ProgressBar android:id="@id/login_progressbar" style="?android:attr/progressBarStyle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/login_fields" android:layout_centerHorizontal="true" android:layout_marginTop="@dimen/default_gap_2x" android:visibility="gone"/> 
  </RelativeLayout> 
</RelativeLayout>
